[package]
name = "whatip"
version = "0.1.0"
edition = "2021"
authors = ["Cryptex"]
description = "A simple CLI program to look up an IP address"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Cryptex-github/whatip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
tokio = { version = "1", features = ["rt"] }
