[package]
name = "whatip"
version = "0.3.0"
edition = "2021"
authors = ["Cryptex"]
description = "A simple CLI program to look up an IP address"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Cryptex-github/whatip"
keywords = ["ip", "address", "lookup", "cli", "clap"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
ureq = { version = "2", default-features = false }
ansi_term = "0.12"
